chore: preserve route config parsing changes